# hydroponic_system

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
backend/: .env.example  README.md  main.js  package-lock.json  package.json
claude/: ba234-ec-calibration-step3.md
components/kinetic_os/: CMakeLists.txt  bolt_img.c  flask_img.c  kinetic_os.c  kinetic_os.h  lightbulb_img.c  thermometer_img.c
components/squareline_ui_backup/: CMakeLists.txt.bak  ui.c  ui.h
components/squareline_ui_backup/screens/: ui_Screen1.c  ui_Screen1.h
docs/: pin_mapping.md
esp32/: esp32.ino
esp32/demo_esp32_wifi_setup/: demo_esp32_wifi_setup.ino
esp32/test_esp_idf/test_main/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32/test_esp_idf/test_main/.cache/clangd/index/: blink_example_main.c.6629DFCD465F739B.idx  (+12 more)
esp32/test_esp_idf/test_main/main/: CMakeLists.txt  Kconfig.projbuild
esp32/test_esp_idf/test_main/main/include/: led.h  wifi_ap.h  wifi_manager.h
esp32/test_esp_idf/test_main/main/src/: led.c  main.c  wifi_ap.c  wifi_manager.c
main/: CMakeLists.txt  ba234.c  ba234.h  fontx.c  fontx.h  hydro_mqtt.c  hydro_mqtt.h  hydro_time.c  hydro_time.h  hydroponic_board.c  idf_component.yml  main.c  mqtt_config.h  pinout.h  settings_manager.c  settings_manager.h  sht4x.c  sht4x.h  st7789.c  st7789.h  ultrasonic_sensor.c  ultrasonic_sensor.h  web_server.c  web_server.h  webpage.h  webpage.html  wifi.h  wifi.h.example
main/hardware_test/: lcd_patterns.c  lcd_patterns.h  lcd_test.c  pump_test.c  tp_sda_test.c
(+2 files in other folders)
